apps/production/yourphr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: yourphr
  namespace: yourphr
spec:
  selector:
    app: yourphr
  ports:
    - name: http
      port: 8080
      targetPort: 8080
